# IVOCT-Data-Processing_EMS-SoSe24-TUHH

./: Cargo.toml  README.md
doc/: technical_overview.md  tutorial.md
src/: app.rs  cache.rs  convolution.rs  main.rs  node_graph.rs  queue_channel.rs
src/gui/: dock_state.rs  mod.rs
src/gui/color_maps/: mod.rs
src/gui/node_graph/: add_node_popup.rs  draw_cut.rs  frame.rs  mod.rs  node_graph_editor.rs
src/gui/pipeline/: mod.rs  nodes.rs
src/gui/pipeline/nodes/: binary_input.rs  diameter.rs  filter.rs  follow_catheter.rs  follow_lumen.rs  generate_mesh.rs  output.rs  process_raw_m_scan.rs  remove_detector_defect.rs  segment_b_scans.rs
src/gui/widgets/: drag_vector.rs  mod.rs  node_combo_box.rs  pan_zoom.rs  pan_zoom_rect.rs  path_input.rs
src/pipeline/: mod.rs  requests.rs  types.rs
src/pipeline/execution/: connection.rs  executor.rs  mod.rs
src/pipeline/nodes/: binary_input.rs  diameter.rs  filter.rs  follow_catheter.rs  follow_lumen.rs  generate_mesh.rs  input.rs  mod.rs  output.rs  process_raw_m_scan.rs  raw_processing.rs  remove_detector_defect.rs  segment_b_scans.rs
src/pipeline/presets/: clinic.json  mod.rs  phantom1_1_3.json  phantom1_2_4.json
src/view/: mod.rs  views_manager.rs
src/view/execution/: executor.rs  mod.rs
src/view/views/: data_vector.rs  m_scan.rs  m_scan.wgsl  mesh.rs  mesh.wgsl  mod.rs
src/view/views/m_scan/: gpu.rs  shader.wgsl  uis.rs
