[package]
name = "test_gui_rust_2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.16.1", features = ["derive"] }
eframe = { version = "0.27.2", features = ["wgpu"] }
egui = "0.27.2"
egui_dock = "0.12.0"
egui_plot = "0.27.2"
futures = "0.3.30"
nalgebra = { version = "0.33.0", features = ["bytemuck", "rayon"] }
native-dialog = "0.7.0"
num-traits = "0.2.19"
rayon = "1.10.0"
rustfft = "6.2.0"
simba = "0.9.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = [
    "rt",
    "macros",
    "sync",
    "fs",
    "rt-multi-thread",
    "time",
    "io-util",
] }
vec-collections = "0.4.3"
